# bitbucket-server

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
.cursor/rules/: specify-rules.mdc
references/: api_endpoints.md
scripts/: bitbucket_api.py
skill/: SKILL.md
specs/001-repo-discovery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-repo-discovery/checklists/: requirements.md
specs/001-repo-discovery/contracts/: cli-commands.md
specs/002-api-integration-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-api-integration-tests/checklists/: requirements.md
specs/002-api-integration-tests/contracts/: test-structure.md
tests/: conftest.py  test_discovery.py  test_pull_requests.py
